--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,13 @@
         android:layout_centerInParent="true"
         android:text="Authenticate" />
 
+    <Button
+        android:id="@+id/setAuthentication"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/authenticate"
+        android:layout_centerInParent="true"
+        android:text="Set Authentication"
+        android:visibility="gone" />
+
 </RelativeLayout>
